# airflow-test-01

./: .env.main  .env.worker  .env.worker2  .gitignore  Dockerfile.observer  Dockerfile.processor  README.md  build-images.sh  docker-compose.yaml  docker-compose_main.yaml  docker-compose_worker.dev.yaml  docker-compose_worker.gpu.yaml  docker-compose_worker.prod.yaml  docker-compose_worker.yaml  main.py  pyproject.observer.toml  pyproject.processor.toml  pyproject.toml  start-main.sh  start-worker-prod.sh  start-workers-dev.sh  start-workers.sh  stop-main.sh  stop-worker-prod.sh  stop-workers-dev.sh  stop-workers.sh
config/: __init__.py  airflow.cfg  base_config.yaml  bay_configs.py  settings.py
config/bay/: bay_12bay-west.yaml  bay_64bay.yaml
dags/: bay_dag_factory.py
dags/maintenance/: __init__.py  data_cleanup_dag.py  log_cleanup_dag.py  tasks.py
dags/observation/: __init__.py  factory.py  tasks.py
dags/processing/: __init__.py  factory.py  tasks.py
dags/shared/: __init__.py  utils.py
docs/: migration_strategy_observation.md
env/: base.env
env/dev/: main.env  worker-obs-12bay-west.env  worker-obs-64bay.env  worker-proc-12bay-west.env  worker-proc-64bay.env  worker.env  worker2.env  worker3.env  worker4.env
env/prod/: main.env  worker.env
postgres/: pg_hba.conf  postgresql.conf
redis/: redis.conf
src/: __init__.py
src/fusion/: __init__.py  fusion_service.py  logic.py  models.py  overlap_analyzer.py  projector.py  result_saver.py
src/observation/: __init__.py  inference_service.py  logic.py  models.py  (+1 more)
tests/: __init__.py  conftest.py
(+28 files in other folders)
