[project]
name = "airflow-cctv-pipeline"
version = "1.0.0"
description = "Distributed Apache Airflow pipeline for CCTV-based block tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# 테스트 마커 정의
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires Airflow)",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src", "dags"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/legacy_reference/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src", "dags", "config"]
